# rusty-pyserver

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  dir_to_zip.rs  html.rs  local_response.rs  logger.rs  main.rs  reader_inspector.rs
