[package]
name = "rusty_pyserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["help"] }
crossterm = "0.28.1"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
mime_guess = "2.0.5"
pin-project-lite = "0.2.14"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
zipit = { version = "0.4.0", features = ["tokio", "tokio-async-io", "chrono", "chrono-datetime"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
